# service_locator

./: .gitignore  CMakeLists.txt  README.md  double_dispatch_service_locator.h  dynamic_service_locator.h  main.cpp  single_dispatch_service_locator.h  static_service_locator.h
.github/workflows/: cmake.yml
